--- a/back-end test/index.html
+++ b/back-end test/index.html
@@ -77,9 +77,10 @@
                 document.body.style.backgroundColor = '#f0f0f0';
                 document.body.style.color = 'white';
                 document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/ppmpreetham/mindmesh/refs/heads/main/back-end%20test/background.png')";
-
+                
             } else if (theme === 'retro') {
                 document.body.style.backgroundColor = '#f5ecdb';
+                document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/ppmpreetham/mindmesh/refs/heads/main/back-end%20test/biege.png')";
                 document.body.style.color = '#74c6ef';
             } else if (theme === 'light') {
                 document.body.style.backgroundColor = '#ffffff';
